manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    istio-injection: enabled
    pr_number: pr-1
    tier: preview
    version: 27c3f15
  name: preview-1-todo-app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    pr_number: pr-1
    tier: preview
    version: 27c3f15
  name: preview-todo-app
  namespace: preview-1-todo-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: preview
    app.kubernetes.io/name: todo-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    pr_number: pr-1
    tier: preview
    version: 27c3f15
  name: preview-todo-app
  namespace: preview-1-todo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: preview
      app.kubernetes.io/name: todo-app
  template:
    metadata:
      labels:
        app: todo-app
        app.kubernetes.io/instance: preview
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: todo-app
        helm.sh/chart: todo-app-0.1.0
        pr_number: pr-1
        sidecar.istio.io/inject: "true"
        tier: preview
        version: 27c3f15
    spec:
      containers:
        - image: rminz/todo-app-test:27c3f15@sha256:85d09575a6cd49750651176d915939cc7bfa7b7e2c70d822b7200d0ff56a5147
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          name: todo-app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo
  namespace: preview-1-todo-app
spec:
  host: preview-todo-app
  subsets:
    - labels:
        version: 27c3f15
      name: preview-27c3f15
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    pr_number: pr-1
    tier: preview
    version: 27c3f15
  name: todo
  namespace: preview-1-todo-app
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - todo-1-pr.127.0.0.1.sslip.io
    - todo-1-pr-27c3f15.127.0.0.1.sslip.io
  http:
    - match:
        - authority:
            prefix: todo-1-pr
      route:
        - destination:
            host: keda-add-ons-http-interceptor-proxy.keda-http-addon.svc.cluster.local
            port:
              number: 8080
    - match:
        - authority:
            prefix: todo-1-pr-27c3f15
      route:
        - destination:
            host: preview-todo-app
            port:
              number: 80
            subset: preview-27c3f15
